--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 /* Base styles */
 body {
   font-family: "Arial", sans-serif;
@@ -8,18 +6,35 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  align-items: flex-start; /* Changed from center to flex-start */
+  min-height: 100vh; /* Changed from height to min-height */
 }
 
 /* Container */
 .container {
-  max-width: 400px;
-  width: 100%;
+  width: 90%;
+  max-width: 1200px;
   padding: 20px;
   background: #fff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  margin-top: 20px; /* Changed from 5rem to 20px */
+  /* align-items: center; */
+  /* text-align: center; */
+}
+
+/* Chart Container */
+#chart-container {
+  margin-top: 20px;
+  width: 100%;
+  max-width: 1200px;
+  height: 400px;
+}
+
+/* Canvas */
+#budget-chart {
+  width: 100% !important;
+  height: auto !important;
 }
 
 /* Header */
@@ -86,6 +101,10 @@ h4 {
 }
 
 /* Form Control */
+#form {
+  width: 80%;
+  margin: 2rem;
+}
 .form-control {
   margin-bottom: 10px;
 }
@@ -99,7 +118,7 @@ h4 {
 
 /* Button */
 .btn {
-  width: 100%;
+  width: 200px;
   background-color: #2980b9;
   color: #fff;
   padding: 10px;
@@ -117,6 +136,9 @@ h4 {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
+  grid-gap: 1rem;
 }
 .list li {
   background: #f4f4f4;
@@ -187,21 +209,12 @@ body.dark-theme {
 }
 
 /* Theme Toggle */
-.theme-toggle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 5px;
-  background-color: dodgerblue;
-  border-radius: 4px;
-}
 .theme-toggle label {
   display: block;
+  margin-bottom: 10px;
   font-size: 16px;
 }
 .theme-toggle input {
-  /* transform: translateY(-5px); */
   transform: scale(1.2);
 }
 .theme-toggle.dark-theme label {
